--- a/assets/components/tvtable/css/mgr/tvtable.css
+++ b/assets/components/tvtable/css/mgr/tvtable.css
@@ -7,6 +7,7 @@
 }
 
 .tvt-input { 
+    min-width: 20px;
     width: 200px; 
     max-width: 200px;
     height: 20px;
@@ -31,6 +32,7 @@
 
 .tvt-headers {
     font-size: 11px;
+    overflow: hidden;
 }
 
 .tvt-headers,
