--- a/assets/components/tvtable/css/mgr/tvtable.css
+++ b/assets/components/tvtable/css/mgr/tvtable.css
@@ -40,7 +40,7 @@
     top: 0;
     right: 0;
     width: 12px;
-    height: 100%;
+    height: calc(100% - 5px);
     background: linear-gradient(to right, transparent, white);
 }
 
@@ -74,7 +74,7 @@
     content: '';
     position: absolute;
     width: 10px;
-    height: calc(100% + 10px);
+    height: calc(100% + 3px);
     background-color: white;
     top: -5px;
 }
@@ -83,14 +83,12 @@
     right: calc(100% - 11px);
     transform: rotate(28deg);
     transform-origin: top left;
-    border-bottom-right-radius: 18px;
 }
 
 .tvt-delete-column:not(.tvt-delete-column-sm)::after {
     left: calc(100% - 11px);
     transform: rotate(-28deg);
     transform-origin: top right;
-    border-bottom-left-radius: 18px;
 }
 
 .tvt-delete-column:hover {
@@ -123,17 +121,6 @@
 
 .tvt-header .tvt-input-wrapper {
     position: relative;
-}
-
-.tvt-header .tvt-input-wrapper::before {
-    content: '';
-    position: absolute;
-    left: -5px;
-    width: calc(100% + 20px);
-    bottom: 100%;
-    height: 5px;
-    background-color: #f0f0ee;
-    z-index: 1;
 }
 
 .tvt-header:not(.locked) .tvt-input-wrapper:hover .tvt-delete-column {
