Remove unnecessary box-shadow on disabled button

--- a/assets/components/tvtable/css/mgr/tvtable.css
+++ b/assets/components/tvtable/css/mgr/tvtable.css
@@ -178,6 +178,7 @@
 .tvt-button.disabled {
     background-color: #cacaca;
     background-image: unset;
+    box-shadow: none;
 }
 
 .tvt-button:disabled:hover,
