--- a/assets/components/tvtable/css/mgr/tvtable.css
+++ b/assets/components/tvtable/css/mgr/tvtable.css
@@ -2,8 +2,7 @@
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 20px;
-    padding-right: 20px;
+    padding: 20px 20px 0 6px;
 }
 
 .tvt-input {
@@ -117,6 +116,9 @@
 }
 
 .tvt-handle {
+    position: absolute;
+    top: 0;
+    left: -14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -124,8 +126,7 @@
     height: 30px;
     color: #000;
     cursor: move;
-    padding-left: 2px;
-    margin-right: 3px;
+    padding: 3px 2px;
     text-shadow: 0 0 0 black;
     user-select: none;
     white-space: normal;
@@ -142,10 +143,6 @@
 
 .tvt-row+.tvt-row {
     padding: 3px 3px 3px 0;
-}
-
-.tvtEditor.drag .tvt-header {
-    margin-left: 10px;
 }
 
 .tvt-header {
